--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <title>Jan Niewielski</title>
      <meta charset="utf-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-     <link rel="stylesheet" href="assets/css/main.css" />
+     <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body class="is-preload">
@@ -143,13 +143,13 @@
      </div>
 
      <!-- Scripts -->
-     <script src="assets/js/jquery.min.js"></script>
-     <script src="assets/js/jquery.scrolly.min.js"></script>
-     <script src="assets/js/jquery.scrollex.min.js"></script>
-     <script src="assets/js/browser.min.js"></script>
-     <script src="assets/js/breakpoints.min.js"></script>
-     <script src="assets/js/util.js"></script>
-     <script src="assets/js/main.js"></script>
+     <script src="js/jquery.min.js"></script>
+     <script src="js/jquery.scrolly.min.js"></script>
+     <script src="js/jquery.scrollex.min.js"></script>
+     <script src="js/browser.min.js"></script>
+     <script src="js/breakpoints.min.js"></script>
+     <script src="js/util.js"></script>
+     <script src="js/main.js"></script>
 </body>
 
 </html>
