--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
      <div id="footer">
           <!-- Copyright -->
           <ul class="copyright">
-               <li><a>Jan &copy; 2022</a></li>
+               <li>Jan &copy; 2022</li>
           </ul>
      </div>
 
