--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="top">
                <!-- Logo -->
                <div id="logo">
-                    <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+                    <span class="image avatar48"><img src="images/pro.jpg" alt="Jan Profile Pic" /></span>
                     <h1 id="title">Jan Niewielski</h1>
                     <p>Jr. Developer</p>
                </div>
